BUG Fix
Script at top of HTML moved to bottom,
Removed Fav Icon Manifest as causing Error (Cant find JSON file)
Console Log removed from JS
Added Margin to bottom of Card to stop Footer overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@ body {
   box-shadow: 0 10px 20px #00000096;
   border-width: 1vh;
   border-color: rgb(82, 10, 10);
+  margin-bottom: 10vh;
 }
 
 #card-description {
